fix styling so thers no overlap

--- a/styles/courses.css
+++ b/styles/courses.css
@@ -54,7 +54,7 @@ body{
     padding: 1rem;
     margin: 2rem;
     color: #465C88;
-    height: 75vh;
+    /* height: 75vh; */
 }
 /*#d59bf6*/
 .cs-card{
